Closed
Bug 621228
Opened 15 years ago
Closed 14 years ago
Make plugins listening presShell SetActive calls
Categories
(Core Graveyard :: Plug-ins, defect)
Core Graveyard
Plug-ins
Tracking
(Not tracked)
RESOLVED
FIXED
mozilla9
People
(Reporter: reportbase, Assigned: romaxa)
References
(Depends on 1 open bug, )
Details
Attachments
(2 files, 4 obsolete files)
|
5.75 KB,
patch
|
jst
:
review+
|
Details | Diff | Splinter Review |
|
5.78 KB,
patch
|
johnath
:
approval-mozilla-aurora-
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9.2.12) Gecko/20101027 Ubuntu/10.04 (lucid) Firefox/3.6.12
Build Identifier:
Upstream patch from harmattan
Reproducible: Always
| Reporter | ||
Comment 1•15 years ago
|
||
| Reporter | ||
Comment 2•15 years ago
|
||
Updated•15 years ago
|
Attachment #499586 -
Attachment is obsolete: true
Attachment #499586 -
Attachment is patch: true
Attachment #499586 -
Attachment mime type: application/octet-stream → text/plain
Updated•15 years ago
|
Updated•15 years ago
|
Attachment #499602 -
Attachment is patch: true
| Assignee | ||
Comment 3•15 years ago
|
||
Might be related to bug 585129
Status: UNCONFIRMED → NEW
Ever confirmed: true
Summary: Plugin Activation → Make plugins listening presShell SetActive calls
| Reporter | ||
Comment 4•15 years ago
|
||
From code comments:
Update plugin active state. Frame should update if it is on an active tab
or not and forward that information to the plugin to make it possible to
throttle down plugin instance in non active case
Component: General → Plug-ins
OS: Linux → All
Product: Fennec → Core
Hardware: Other → All
Updated•15 years ago
|
QA Contact: general → plugins
| Assignee | ||
Updated•15 years ago
|
| Reporter | ||
Updated•15 years ago
|
Attachment #499602 -
Flags: review?(joshmoz)
| Reporter | ||
Comment 5•15 years ago
|
||
Attachment #499602 -
Attachment is obsolete: true
Attachment #501449 -
Flags: review?(joshmoz)
Attachment #499602 -
Flags: review?(joshmoz)
Attachment #501449 -
Flags: review?(joshmoz) → review?(jst)
| Reporter | ||
Comment 6•15 years ago
|
||
Attachment #501449 -
Attachment is obsolete: true
Attachment #501451 -
Flags: review?(joshmoz)
Attachment #501449 -
Flags: review?(jst)
Attachment #501451 -
Flags: review?(joshmoz) → review?(jst)
| Assignee | ||
Comment 7•14 years ago
|
||
Updated patch, Fixed reactivation of invisible plugins on activated shell...
Without this patch plugins staying in "visible" state for all background tabs
Assignee: nobody → romaxa
Attachment #501451 -
Attachment is obsolete: true
Status: NEW → ASSIGNED
Attachment #553917 -
Flags: review?(jst)
Attachment #501451 -
Flags: review?(jst)
Comment 8•14 years ago
|
||
Comment on attachment 553917 [details] [diff] [review]
Sync plugins visibility state with docShell active state
+nsPluginInstanceOwner::UpdateDocumentActivity(PRBool aIsActive)
I'd much rather see this new method called UpdateDocumentActiveState(), as that's what it does.
r=jst with that.
Attachment #553917 -
Flags: review?(jst) → review+
| Assignee | ||
Comment 9•14 years ago
|
||
Fixed nits
| Assignee | ||
Updated•14 years ago
|
Keywords: checkin-needed
Comment 10•14 years ago
|
||
Keywords: checkin-needed
Comment 11•14 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla9
| Assignee | ||
Comment 12•14 years ago
|
||
Comment on attachment 553994 [details] [diff] [review]
Sync plugins visibility state with docShell active state. TO PUSH
This is important change for handling Plugins activity on Mobile (N9). and prevent power consumption caused by running plugins in background tabs..
Risk is medium, because plugins are unpredictable...
Attachment #553994 -
Flags: approval-mozilla-aurora?
Comment 13•14 years ago
|
||
Comment on attachment 553994 [details] [diff] [review]
Sync plugins visibility state with docShell active state. TO PUSH
Discussed in triage today - touching plugins is scary, and while it's good to see this fix coming in, it doesn't feel like something we should rush in against rules (aurora should only be for regressions in the current version or crash/security fixes - this isn't those things). Please re-nom if you think we've missed something in our analysis.
Attachment #553994 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora-
Updated•4 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•