Bug 621228 - Make plugins listening presShell SetActive calls. r=jst